Use watson tone analyzer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ mp.messaging.outgoing.tone.value.serializer=org.apache.kafka.common.serializatio
 mp.messaging.incoming.tweets.connector=smallrye-kafka
 mp.messaging.incoming.tweets.topic=tweets
 mp.messaging.incoming.tweets.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+watson.token=${ACCESS_TOKEN}
+watson.url=${SERVICE_URL}
